Add router configurations to env.example

--- a/env.example
+++ b/env.example
@@ -1,3 +1,6 @@
 DB_ROOT_PASSWORD=password
 DB_NAME=db-name
 DOMAIN=example.com
+ROUTERS_WP_TRAEFIK=testwp
+ROUTERS_PMA_TRAEFIK=testpma
+ROUTERS_DB_TRAEFIK=testdb
